--- a/Theme-Switch/index.html
+++ b/Theme-Switch/index.html
@@ -19,7 +19,7 @@
         </label>
     </div>
 
-    <footer>&copy; Feito por <a href="instagram.com/progtrevo/">Estevam Neto</a></footer>
+    <footer>&copy; Feito por <a href="https://www.instagram.com/progtrevo/" target="_blank">Estevam Neto</a></footer>
 
     <script src="script.js"></script>
 </body>
