falta terminar modal das imagens

--- a/galeria-de-imagens/index.html
+++ b/galeria-de-imagens/index.html
@@ -114,9 +114,9 @@
         <a href="#titulo" class="material-symbols-outlined to-top">arrow_upward</a>
     </div>
 
-        <!-- <div class="img-container">
+        <div class="img-container">
             <img id="full-screen-img" src="imagens/ashutosh-singh-rana-rm7Or54Q-Dk-unsplash.jpg">
-        </div> -->
+        </div>
 
     <footer>&copy; Feito por <a href="https://www.instagram.com/progtrevo/" target="_blank">Estevam Neto</a></footer>
 
